# univ-istp

./: .envrc  .gitignore  db.gv  flake.nix  manage.py  pyproject.toml  use-case.uml
bgclub/: admin.py  apps.py  forms.py  models.py  tables.py  views.py
bgclub/migrations/: 0001_initial.py
bgclub/static/: index.js  style.css
bgclub/templates/: base.html  index.html  new_session_players.html  new_session_time.html  table.html
istp/: settings.py  urls.py  wsgi.py
lab-1/: .envrc  compile-doc.sh  db.gv  flake.nix  manage.py
lab-1/bgclub/: admin.py  models.py  tables.py  views.py
lab-1/bgclub/migrations/: 0001_initial.py
lab-1/bgclub/templates/: base.html  index.html  new_session_time.html
lab-1/istp/: urls.py  wsgi.py
lab-2/: .envrc  api.py  compile-doc.sh  db.gv  flake.nix  main.py  models.py  use-case.gv
lab-2/forms/: player.html
report/: .gitignore  flake.nix  report.tex
