[tool.poetry]
name = "istp_app"
version = "0.1.0"
description = ""
authors = ["Nazar Vinnichuk <nazar@vinnich.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.31"
asyncpg = "^0.25.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
